--- a/views/employee.hbs
+++ b/views/employee.hbs
@@ -1,28 +1,153 @@
 <div class="row">
  <div class="col-md-12">
- <h2>{{employee.firstName}} {{ employee.lastName}} - Employee:
-{{ employee.employeeNum}}</h2>
+    {{#each employee}}
+    
+         <h2>{{firstName}} {{lastName}} - Employee:
+{{employeeNum}}</h2>
  <hr />
  <form method="post" action="/employee/update">
  <fieldset>
  <legend>Personal Information</legend>
  <div class="row">
+
  <div class="col-md-6">
  <div class="form-group">
  <label for="firstName">First Name:</label>
  <input class="form-control" id="firstName" name="firstName" type="text"
-value="{{employee.firstName}}"/>
+value="{{firstName}}"/>
  </div>
  </div>
+
  <div class="col-md-6">
  <div class="form-group">
  <label for="lastName">Last Name:</label>
  <input class="form-control" id="lastName" name="lastName" type="text"
-value="{{employee.lastName}}" />
+value="{{lastName}}" />
  </div>
  </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="employeeNum"></label>
+ <input class="form-control" id="employeeNum" name="employeeNum" type="hidden"
+value="{{employeeNum}}" />
  </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="email">Email:</label>
+ <input class="form-control" id="email" name="email" type="email"
+value="{{email}}" />
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="SSN">Social Security Number:</label>
+ <input class="form-control" id="SSN" name="SSN" type="text"
+value="{{SSN}}" readonly />
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="SSN">Address (Street):</label>
+ <input class="form-control" id="addressStreet" name="SSN" type="addressStreet"
+value="{{addressStreet}}" />
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="addressCity">Address (City)</label>
+ <input class="form-control" id="addressCity" name="addressCity" type="text"
+value="{{addressCity}}" />
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="addressState">Address (State):</label>
+ <input class="form-control" id="addressState" name="addressState" type="text"
+value="{{addressState}}" />
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="addressPostal">Address (Zip Code):</label>
+ <input class="form-control" id="addressPostal" name="addressPostal" type="text"
+value="{{addressPostal}}" />
+ </div>
+ </div>
+
+<legend>Company Information</legend>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="isManager">Manager:</label>
+ <input class="form-control" id="isManager" name="isManager" type="checkbox" value ="{{isManager}}"
+{{#if isManager}}
+checked
+{{/if}}
+/>
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="employeeManagerNum">Employee's Manager Number:</label>
+ <input class="form-control" id="employeeManagerNum" name="employeeManagerNum" type="text"
+value="{{employeeManagerNum}}" />
+ </div>
+ </div>
+
+ <div class="col-md-6">
+ <div class="form-group">
+ <label for="status">Full Time:</label>
+ <input class="form-control" id="status" name="status" type="radio"
+value="{{status}}" 
+    {{#equal status "Full Time"}}
+    checked
+    {{/equal}}
+/>
+<label for="status">Part Time:</label>
+ <input class="form-control" id="status" name="status" type="radio"
+value="{{status}}" 
+    {{#equal status "Part Time"}}
+    checked
+    {{/equal}}
+    />
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="department">Department:</label>
+ <input class="form-control" id="department" name="department" type="select"
+value="{{department}}"
+    {{#equal}}
+/>
+ </div>
+ </div>
+
+<div class="col-md-6">
+ <div class="form-group">
+ <label for="hireDate">Hire Date:</label>
+ <input class="form-control" id="hireDate" name="hireDate" type="text"
+value="{{hireDate}}" readonly/>
+ </div>
+ </div>
+
+
+
+
+
+ </div>
+ 
  </fieldset>
+ {{/each}}
  <hr />
  <input type="submit" class="btn btn-primary pull-right" value="Update Employee" /><br
 /><br /><br />
