--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -1,6 +1,6 @@
 <div class="row">
  <div class="col-md-12">
- <h2>Departments</h2>
+ <h2>Departments <a href="/departments/add" class="btn btn-success pull-right">Add New Department</a></h2>
  <hr>
  <table border="1">
     <tr>
@@ -10,7 +10,7 @@
     {{#each departments}}
     <tr>
         <td><a href ="/employees?department={{departmentId}}">{{departmentId}}</a></td>
-        <td><a href ="/employees?department={{departmentId}}">{{departmentName}}</a></td>
+        <td><a href="/department/{{departmentId}}">{{departmentName}}</a></td>
     </tr>
     {{else}}
      <div class="col-md-12 text-center">
