--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -1,6 +1,6 @@
 <div class="row">
  <div class="col-md-12">
- <h2>Employees</h2>
+ <h2>Employees <a href="/employees/add" class="btn btn-success pull-right">Add New Employee</a></h2>
  <hr />
  <table border ="1">
     <tr>
@@ -23,6 +23,7 @@
             <td><a href = "/employees?status={{status}}">{{status}}</a></td>
             <td><a href ="/employees?department={{department}}">{{department}}</td>
             <td>{{hireDate}}</td>
+            <td><a href="/employee/delete/{{employeeNum}}" class="btn btn-success pull-right">Remove</a></td>
         </tr>
     {{else}}
         <div class="col-md-12 text-center">
