--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,15 +28,15 @@
             {{#navLink "/"}}Home{{/navLink}}
         
             {{#navLink "/about"}}About{{/navLink}}
-            {{#navLink "/employees/add"}}Add Employee{{/navLink}}
-            {{#navLink "/images/add"}}Add Image{{/navLink}}
+            {{!-- {{#navLink "/employees/add"}}Add Employee{{/navLink}} --}}
+            {{!-- {{#navLink "/images/add"}}Add Image{{/navLink}} --}}
            
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {{!-- <li><a href="/employees">Employees</a></li>
             <li><a href="/departments">Departments</a></li>
             <li><a href="/images">Images</a></li> --}}
-            {{#navLink "/employees"}}Employee{{/navLink}}
+            {{#navLink "/employees"}}Employees{{/navLink}}
             {{#navLink "/departments"}}Departments{{/navLink}}
             {{#navLink "/images"}}Images{{/navLink}}
           </ul>
