--- a/views/addDepartment.hbs
+++ b/views/addDepartment.hbs
@@ -1,7 +1,7 @@
 <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2> {{title}}</title></h2>
+                <h2> Add Department</title></h2>
                 <br>
                 <form method="post" action="/departments/add">
                     <fieldset>
