--- a/views/department.hbs
+++ b/views/department.hbs
@@ -1,8 +1,7 @@
 <div class="row">
  <div class="col-md-12">
     {{#each department}}
-    
-         <h2>{{departmentName}} Department: {{departmentId}} - Employee:
+    <h2>{{departmentName}} Department: {{departmentId}} - Employee:
 {{employeeNum}}</h2>
  <hr />
  <form method="post" action="/department/update">
@@ -22,6 +21,6 @@ value="{{departmentName}}"/>
 
   <input type="submit" class="btn btn-primary pull-right" value="Update Department" /><br /><br /><br />
  </form>
- 
+ {{/each}}
  </div>
-</div>
+ </div>
