--- a/views/employee.hbs
+++ b/views/employee.hbs
@@ -130,9 +130,9 @@ value="{{status}}"
 <div class="col-md-3">
  <div class="form-group">
  <label for="department">Department:</label>
- {{#if viewData.departments}}
+ {{#if department}}
  <select class="form-control" name="department" id="department">
- {{#each viewData.departments}}
+ {{#each department}}
  <option value="{{departmentId}}" {{#if selected}} selected {{/if}} >{{departmentName}}
 </option>
  {{/each}}
