--- a/views/employee.hbs
+++ b/views/employee.hbs
@@ -141,6 +141,7 @@ value="{{hireDate}}" readonly/>
  
  {{/each}}
  
+ {{!-- I have to move it down here because it needs to be out of the each for it to work, if i dont put the each then the firstname and other wouldn't work --}}
  <hr />
  <div class="col-md-3">
  <div class="form-group">
