--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,15 +1,13 @@
-  <div class="container">
-      <div class="row">
+<div class="row">
     <div class="col-md-12">
-
         <h2>Register</h2>
         <hr />
-        {{#if errorMessage}}
-       <div class="alert alert-danger"> <strong>Error:</strong> {{errorMessage}}</div>
-        {{else}}
          {{#if successMessage}}
         <div class="alert alert-success"> <strong>Success:</strong> {{successMessage}}</div><a class="btn btn-success pull-right"
         href="/login">&nbsp;&nbsp;&nbsp;Proceed to Log in &nbsp;&nbsp;&nbsp;</a><br /><br /><br />
+         {{else}}
+        {{#if errorMessage}}
+       <div class="alert alert-danger"> <strong>Error:</strong> {{errorMessage}}</div>
         {{/if}}
         <form method="post" action="/register">
             <div class="row">
@@ -41,10 +39,8 @@
                     </div>
                 </div>
             </div>
-            <input type="submit" class="btn btn-success pull-right" value="Register" />
+            <input type="submit" class="btn btn-success pull-right" text = "Register" value="Register" />
         </form>
-
-
+        {{/if}}
     </div>
 </div>
-    </div>
